Show Dropdown popups in React portals Set default z-index:0 for .segment to fix rendering inside flex grid

--- a/basic-styles/grid.scss
+++ b/basic-styles/grid.scss
@@ -264,6 +264,7 @@
 .segment {
   padding: $space-standard;
   position: relative;
+  z-index: 0;
 
   &:before, &:after {
     content: '';
